--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,19 @@
 
 	</dependencies>
 	
+<distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>ip-172-31-14-84.ap-south-1.compute.internal-releases</name>
+        <url>http://13.127.189.46:8081/artifactory/lincoln_artifacts</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>ip-172-31-14-84.ap-south-1.compute.internal-snapshots</name>
+        <url>http://13.127.189.46:8081/artifactory/lincoln_artifacts</url>
+    </snapshotRepository>
+</distributionManagement>
+	
 	
 	<build>
 		<finalName>AccountLogin</finalName>
